# language-api

./: .env.example  .gitignore  Language App API.postman_collection.json  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
catalog/: apps.py  auth_serializers.py  auth_views.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_backfill_user_profiles.py
catalog/models/: __init__.py  enrollment.py  exercise.py  language.py  lesson.py  level.py  profile.py  progress.py
catalog/serializers/: __init__.py  enrollment.py  exercise.py  language.py  lesson.py  level.py  profile.py  progress.py  user.py
catalog/views/: __init__.py  auth.py  enrollment.py  exercise.py  health.py  language.py  lesson.py  level.py  profile.py  progress.py
config/: settings.py  urls.py
scripts/: seed_remote.py
