[project]
name = "language-api"
version = "0.1.0"
description = "Django REST API"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.1",
    "django==5.2.14",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "gunicorn>=26.0.0",
    "psycopg2-binary==2.9.12",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
]

[tool.uv]
package = false
